<resources>
    <string name="app_name">App Blocker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tutorial_1_title">Block Apps</string>
    <string name="tutorial_1_sub_title">No more wasting time!</string>
    <string name="tutorial_1_sub_title_2">Improve your <b>productivity</b> and \n<b>digital well-being</b>\n\n by getting control over your phone usage</string>
    <string name="tutorial_2_title">Create Blocks</string>
    <string name="tutorial_2_sub_title">Select apps to block</string>
    <string name="tutorial_2_sub_title_1">Select time when block is active in week</string>
    <string name="tutorial_2_sub_title_2">Or set a usage limit</string>
    <string name="tutorial_2_sub_title_3">30 min</string>
    <string name="tutorial_2_sub_title_4">No more distraction</string>
    <string name="tutorial_2_sub_title_5">Blocked</string>
    <string name="tutorial_4_title">Need more control?</string>
    <string name="tutorial_4_sub_title">Enable strict blocking to prevent \nblocked apps from being unlocked</string>
    <string name="tutorial_4_sub_title_1">Only a reboot will disable strict blocks,\nif needed you can even disable this in the settings</string>
    <string name="tutorial_3_title">View your app usage</string>
    <string name="tutorial_3_subtitle">Get weekly usage report</string>
    <string name="nav_item_1">Blocks</string>
    <string name="nav_item_2">App Usage</string>
    <string name="nav_item_3">Reports</string>
    <string name="nav_item_4">Archive</string>
    <string name="add_restriction">Add Restriction</string>
    <string name="upgrade">upgrade</string>
    <string name="save_time">Saving time?</string>
    <string name="help"><![CDATA[Help & FAQ]]></string>
    <string name="translate">Help Translate</string>
    <string name="settings">Settings</string>
    <string name="permission_view_title">Permission Needed</string>
    <string name="permission_view_sub_title">Needed for blocking apps, websites, notifications, and displaying your apps usage.</string>
    <string name="give_permission">Give Permission</string>
    <string name="blocked_notification">Blocked Notifications</string>
    <string name="empty_blocked_notification">No Blocked Notification</string>
    <string name="empty_blocked_notification_sub_info">Block Notification will show up here.</string>
    <string name="empty_block">No Blocks</string>
    <string name="empty_block_sub_info">Create a new block by pressing the + button</string>
    <string name="empty_reports">No Reports</string>
    <string name="empty_report_sub_info">Come back next Monday for your\n first app usage report.</string>
    <string name="empty_archive">Empty Archive</string>
    <string name="empty_archive_sub_info">Archive blocks will show up here.</string>
    <string name="dummy_permission_name">Notification Access</string>
    <string name="dummy_notification_permission_desc">To count and block notifications,and keep the app alive while running in the background</string>
    <string name="enable">Enable</string>
    <string name="dummy_info">No data is collected from these permissions\n<font color="#80000000">This data stays on your device and only used for the app functionality.</font></string>
    <string name="save_time_info">"If this app has helped you to get more control over your phone usage, would you please consider returning a favour by giving rating on the play store?\n\nAnd if you think there is anything that can be improved please let us know by sending us an email "</string>
    <string name="cancel">Cancel</string>
    <string name="rate">Rate</string>
    <string name="feedback">Send Feedback</string>
    <string name="premium">Premium</string>
    <string name="premium_info">One-time purchase, never expires.</string>
    <string name="premium_info_2"><font color="#000000">Unlock all features below...</font>\n<small>...and support the developer of this app</small></string>
    <string name="dummy_price">Rs.300.00</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="miui_permission"><font color="#000000">MIUI pop-up window permission</font>\n<small>Please give Display pop-up windows permission,this is needed in MIUI devices to block apps.</small></string>
    <string name="foreground_service_alive"><font color="#000000">Keep foreground service alive</font>\n<small>Enable this if your blocks don\'t activate automatically.\n</small></string>
    <string name="app_not_working"><font color="#000000">App not working?</font>\n<small>It is likely that your device stopping the app while it is running in the background.Please Press here and follow the solution for your device.</small></string>
    <string name="report_bug">Report a bug</string>
    <string name="strict_block">Strict Blocking</string>
    <string name="device_reboot"><font color="#000000">Keep blocks and limit active after device reboot</font>\n<small>When disabled, blocks and limits will only activate at their next starting time after the reboot or after opening this app.</small></string>
    <string name="prevent_uninstall"><font color="#000000">Prevent uninstallation</font>\n<small>Enable device administrator to prevent the app from being uninstalled.</small></string>
    <string name="pause_delay"><font color="#000000">Pause delay</font>\n<small>Amount of time to wait before you can pause a block(5 seconds)</small></string>
    <string name="pin_code_setup">Enable PIN to open this app</string>
    <string name="set_pin">Set a PIN Code</string>
    <string name="title_pin_code">Pin Code</string>
    <string name="start_week">Start of Week</string>
    <string name="dummy_day">Sunday</string>
    <string name="time">Time</string>
    <string name="quotes">Quotes</string>
    <string name="show_quote"><font color="#000000">Show quote at blocked app</font>\n<small>Show a random productivity quote when attempting to open a blocked app.</small></string>
    <string name="custom_quote">Set a custom quote</string>
    <string name="notification">Notifications</string>
    <string name="usage_report"><font color="#000000">New usage report</font>\n<small>Receive notifications when a new usage report is ready.</small></string>
    <string name="reminders">"<font color="#000000">Usage limit reminders</font>\n<small>Show usage limit reminder notification when an app reaching its usage limit.</small>"</string>
    <string name="dummy_time_1">-10</string>
    <string name="dummy_time_2">-1</string>
    <string name="dummy_time_3">+1</string>
    <string name="dummy_time_4">+10</string>
    <string name="report_bug_text_1">Please describe the issue here</string>
    <string name="report_bug_text_2">Select what information to include \n<small>This will only be used to help solve the issue</small></string>
    <string name="report_bug_text_3">Send logs, device info, and app settings\n(including configured blocks and limits)</string>
    <string name="report_bug_text_4">Send app usage data provided by the Android system. App IDs and website URLs get replaced with non-identifying numbers in the updated report.</string>
    <string name="send_report">Send report</string>
    <string name="app_not_working_title">App is not working?</string>
    <string name="faq_point_1">Are blocks and limits not activated automatically? It is likely that the app is being killed in the background on your device. Some device manufacturers (e.g. Huawei and Xiaomi) have modified their Android system to kill apps more aggressively, and unfortunately the app cannot prevent tis by itself. Please follow the solutions below to prevent your device from killing the app.</string>
    <string name="solution">Solution for your device</string>
    <string name="faq_point_2_title">How can I prevent myself from uninstalling the app?</string>
    <string name="faq_point_2_desc">Go to the Settings within this app, and press the option to enable the Device Administrator permission to prevent the app from being uninstalled.</string>
    <string name="faq_point_3_title">I\'ve lost my Premium upgrade after the app was updated, how can i restore?</string>
    <string name="faq_point_3_desc">This is likely due to having multiple Google accounts logged into the Play Store on your device, unfortunately there is an issue with Google Play that can cause the purchase to become invisible to the app after an update. To fix this, please try the following steps\n\n<b>Fix A(only works if the account used to make the purchase is the \"primary\" account on the device):</b>\n\n- Clear the data of the Google Play Store app\n\n- Open the Google Play Store app and accept the terms\n\n- Open this app, it should automatically detect the upgrade again. Otherwise, try Fix B below.\n\n<b>Fix B:</b>\n\n- Uninstall this app\n\n- Open the Google Play Store and switch to the sccount you made the purchase from\n\n- Download and open this app again\n\nIf neither works, please send me an email with your order ID (found in the receipt sent by Google when you made hte purchase)</string>
    <string name="faq_point_4_title">My block is active, but I can still access my blocked apps?</string>
    <string name="faq_point_4_desc">First check whether you have given the right permission (there should not be a prompt on the home screen of this app asking for permission). Also check the troubleshooting steps for your device (found in the app settings), It is possible your device is killing the app in the background. In case apps are still not blocked after the permission is given, pleaswe send me an email with information about your block and which apps can still be accessed.</string>
    <string name="faq_point_5_title">How do I keep blocks and limits activated after a device reboot?</string>
    <string name="faq_point_5_desc">You can go to the app settings and enable blocks being restarted after a reboot. Careful though, as rebooting is the only built-in option to stop any active (strict) blocks. There is no other way to stop a block onec it is active.</string>
    <string name="faq_point_6_title">Why do I see the system notification \"Block is running in the background\"?</string>
    <string name="faq_point_6_desc">Since Android O, the system will place this notification when the app has an active service running in the background. The app needs thsi service to detect which app has been opened by you(and block if necessary), but this requires almost no work in the background. When you switch off your screen this detection will pause until you switch the screen back on agian, so overall you should not see any noticeable decrease in battery life. Unfortunately, it is not possible to turn off this notification from within the app, but there exist some apps that will hide this notification for you in the Play Store.</string>
    <string name="faq_point_7_title">How do I stop an active block?</string>
    <string name="faq_point_7_desc">If strict mode isn\'t enabled, you can pause or edit the restrictions to diable and active block. Otherwise, in the case you really need to use an app while strict mode is enabled, you can restart your phone to stop all active blocks. If you have not disabled this in the settings. Before you do that, please remind yourself why you started the block and whether you really cannot do without that app right now.</string>
    <string name="faq_point_8_title">Why can\'t I find app X to add to my block?</string>
    <string name="faq_point_8_desc">For emergency reasons, apps from which you can make calls have been excluded. Similarly, \"Launchers\" apps are also not supported, as they might introduce the infinite blocking messages loops. Let me know if you think your app should be able to be blocked by sending an email.</string>
</resources>