<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/bg_pop_up_menu">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSave"
        style="@style/PopUpWindow"
        android:text="@string/save_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvHelp"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHelp"
        android:text="@string/help"
        style="@style/PopUpWindow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHelp"
        app:layout_constraintBottom_toTopOf="@id/tvTranslate"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTranslate"
        android:text="@string/translate"
        style="@style/PopUpWindow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHelp"
        app:layout_constraintBottom_toTopOf="@id/tvSettings"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSettings"
        android:text="@string/settings"
        style="@style/PopUpWindow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTranslate"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>