<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".screen.faq_section.FAQActivity">

    <include
        android:id="@+id/appBar"
        layout="@layout/blocked_notification_app_bar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_60sdp">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/faqPoint1"
                style="@style/TutorialMidTitle"
                android:text="@string/app_not_working_title"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/faqPoint1Desc"
                style="@style/TutorialMidTitle"
                android:text="@string/faq_point_1"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_11ssp"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/faqPoint1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSolution"
                style="@style/TutorialMidTitle"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/solution"
                app:backgroundTint="@color/white"
                android:textColor="@color/app_color"
                app:strokeColor="#33000000"
                android:textSize="@dimen/_11ssp"
                app:strokeWidth="1dp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/faqPoint1Desc"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/faqPoint2"
                style="@style/TutorialMidTitle"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="start"
                android:text="@string/faq_point_2_title"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnSolution" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/faqPoint2Desc"
                style="@style/TutorialMidTitle"
                android:text="@string/faq_point_2_desc"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/faqPoint2"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/faqPoint3"
                style="@style/TutorialMidTitle"
                android:text="@string/faq_point_3_title"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_15sdp"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/faqPoint2Desc"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/faqPoint3Desc"
                style="@style/TutorialMidTitle"
                android:text="@string/faq_point_3_desc"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/faqPoint3"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/faqPoint4"
                style="@style/TutorialMidTitle"
                android:text="@string/faq_point_4_title"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_15sdp"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/faqPoint3Desc"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/faqPoint4Desc"
                style="@style/TutorialMidTitle"
                android:text="@string/faq_point_4_desc"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_11ssp"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/faqPoint4"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/faqPoint5"
                style="@style/TutorialMidTitle"
                android:text="@string/faq_point_5_title"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/faqPoint4Desc"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/faqPoint5Desc"
                style="@style/TutorialMidTitle"
                android:text="@string/faq_point_5_desc"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/faqPoint5"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/faqPoint6"
                style="@style/TutorialMidTitle"
                android:text="@string/faq_point_6_title"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/faqPoint5Desc"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/faqPoint6Desc"
                style="@style/TutorialMidTitle"
                android:text="@string/faq_point_6_desc"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/faqPoint6"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/faqPoint7"
                style="@style/TutorialMidTitle"
                android:text="@string/faq_point_7_title"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/_11ssp"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/faqPoint6Desc"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/faqPoint7Desc"
                style="@style/TutorialMidTitle"
                android:text="@string/faq_point_7_desc"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/faqPoint7"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/faqPoint8"
                style="@style/TutorialMidTitle"
                android:text="@string/faq_point_8_title"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/faqPoint7Desc"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/faqPoint8Desc"
                style="@style/TutorialMidTitle"
                android:text="@string/faq_point_8_desc"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_11ssp"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/faqPoint8"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_nav_lock_unselected"
        app:backgroundTint="@color/tutorial_color"
        android:outlineSpotShadowColor="@color/white"
        android:layout_marginBottom="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>