<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_20sdp"
    android:layout_margin="@dimen/_5sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_saving_time_dialog">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        style="@style/TutorialMidTitle"
        android:text="@string/report_bug"
        android:textColor="@color/black"
        android:gravity="start"
        android:textSize="@dimen/_18ssp"
        android:background="@drawable/bg_saving_time_title"
        android:paddingVertical="@dimen/_12sdp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:boxStrokeColor="@color/app_color"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            style="@style/TutorialMidTitle"
            android:layout_width="match_parent"
            android:hint="@string/report_bug_text_1"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/poppins_medium"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSubtitle1"
        style="@style/TutorialMidTitle"
        android:text="@string/report_bug_text_2"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:gravity="start"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/tvSubTitle"
        app:layout_constraintStart_toStartOf="@id/tvSubTitle"
        app:layout_constraintEnd_toEndOf="@id/tvSubTitle"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/tvLogs"
        style="@style/TutorialSmallTitle"
        android:text="@string/report_bug_text_3"
        android:textColor="@color/black"
        android:textSize="@dimen/_9ssp"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="0dp"
        android:gravity="start"
        app:buttonTint="@color/app_color"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle1"
        app:layout_constraintStart_toStartOf="@id/tvSubtitle1"
        app:layout_constraintEnd_toEndOf="@id/tvSubtitle1"
        />
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/tvUsageData"
        style="@style/TutorialSmallTitle"
        android:text="@string/report_bug_text_4"
        android:textColor="@color/black"
        android:textSize="@dimen/_9ssp"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="0dp"
        android:gravity="start"
        app:buttonTint="@color/app_color"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/tvLogs"
        app:layout_constraintStart_toStartOf="@id/tvSubtitle1"
        app:layout_constraintEnd_toEndOf="@id/tvSubtitle1"
        />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCancel"
        style="@style/TutorialMidTitle"
        android:layout_width="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/tutorial_color"
        android:paddingVertical="@dimen/_5sdp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintEnd_toStartOf="@id/tvOk"
        app:layout_constraintTop_toBottomOf="@id/tvUsageData"/>



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvOk"
        style="@style/TutorialMidTitle"
        android:layout_width="wrap_content"
        android:text="@string/send_report"
        android:textColor="@color/tutorial_color"
        android:paddingVertical="@dimen/_5sdp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUsageData"/>

</androidx.constraintlayout.widget.ConstraintLayout>